fix : ` Refactor - maintainability Google Font API usage and  improved readability`

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,8 @@
 @import url("https://api.fontshare.com/v2/css?f[]=jet-brains-mono@300,200,500&f[]=cabinet-grotesk@400,800,300,500,600,200,100,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
+
 
 @font-face {
   font-family: "Satoshi";
@@ -15,6 +17,14 @@
 @font-face {
   font-family: "Instrument Serif";
   src: url("../font/InstrumentSerif-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Italianno";
+  src: url("../font/Italianno-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -107,7 +117,7 @@ p {
 
 footer p {
   color: #d6d3d1;
-  font-size: 0.9rem;
+  /* font-size: 0.9rem; */
   font-weight: 450;
   letter-spacing: normal;
 }
@@ -260,6 +270,18 @@ mark {
 
 .font-instrument_serif {
   font-family: "Instrument Serif", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-Italianno {
+  font-family: "Italianno", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.font-alex-brush-regular {
+  font-family: "Alex Brush", cursive;
   font-weight: 400;
   font-style: normal;
 }
